--- a/components/layout/top-bar/top-bar.css
+++ b/components/layout/top-bar/top-bar.css
@@ -1,11 +1,7 @@
 .top-bar {
     background: #000;
-    padding: 0.875rem 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1001;
+    padding: 0.5rem 0;
+    position: relative;
 }
 
 .top-bar-content {
