--- a/components/layout/header/header.css
+++ b/components/layout/header/header.css
@@ -163,6 +163,24 @@
     position: relative;
 }
 
+/* Bridge to connect button to dropdown - prevents gap from causing mouseout */
+.mega-menu-wrapper::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: transparent;
+    pointer-events: none;
+}
+
+.mega-menu-wrapper:hover::after {
+    pointer-events: auto;
+}
+
+
+
 .mega-menu {
     position: fixed;
     top: 70px;
